{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 53,
  "lineage": "05ac3c42-730c-7583-5b70-0517203f25fc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "fortune-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:178687330269:loadbalancer/app/fortune-lb-listener/0dbac82b67076db2",
            "arn_suffix": "app/fortune-lb-listener/0dbac82b67076db2",
            "dns_name": "fortune-lb-listener-1967799136.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:178687330269:loadbalancer/app/fortune-lb-listener/0dbac82b67076db2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fortune-lb-listener",
            "security_groups": [
              "sg-0230e468608dc098c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d1b562c"
              },
              {
                "subnet_id": "subnet-19180f54"
              }
            ],
            "subnets": [
              "subnet-0d1b562c",
              "subnet-19180f54"
            ],
            "vpc_id": "vpc-a1d043dc",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.fortune-lb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "fortune-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:178687330269:listener/app/fortune-lb-listener/0dbac82b67076db2/148c42886fe495c8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:178687330269:targetgroup/fortune-lb-target-group/77c935dbbf29b307",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:178687330269:listener/app/fortune-lb-listener/0dbac82b67076db2/148c42886fe495c8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:178687330269:loadbalancer/app/fortune-lb-listener/0dbac82b67076db2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.fortune-lb-listener",
            "aws_lb_target_group.fortune-lb-target-group",
            "aws_security_group.fortune-lb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fortune-lb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:178687330269:targetgroup/fortune-lb-target-group/77c935dbbf29b307",
            "arn_suffix": "targetgroup/fortune-lb-target-group/77c935dbbf29b307",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": false,
                "healthy_threshold": 5,
                "interval": 35,
                "matcher": "200",
                "path": "/",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:178687330269:targetgroup/fortune-lb-target-group/77c935dbbf29b307",
            "lambda_multi_value_headers_enabled": false,
            "name": "fortune-lb-target-group",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
              }
            ],
            "target_type": "lambda"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "fortune-target-group-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:178687330269:targetgroup/fortune-lb-target-group/77c935dbbf29b307-20210614003601174200000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:178687330269:targetgroup/fortune-lb-target-group/77c935dbbf29b307",
            "target_id": "arn:aws:lambda:us-east-1:178687330269:function:app"
          },
          "dependencies": [
            "aws_iam_role.fortune-lambda-iam",
            "aws_lambda_function.fortune-handler",
            "aws_lambda_permission.fortune-lambda-permission",
            "aws_lb_target_group.fortune-lb-target-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fortune-lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:178687330269:security-group/sg-0230e468608dc098c",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0230e468608dc098c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "security group for fortune LB",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fortune-lb-sg",
            "name_prefix": "",
            "owner_id": "178687330269",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-a1d043dc"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}